--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,1 +1,44 @@
+name: Generate Pacman Contribution Graph
+
+on:
+  schedule:
+    - cron: '0 */12 * * *'  # Chạy mỗi 12 tiếng
+  workflow_dispatch:        # Cho phép chạy thủ công từ tab Actions
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Pacman generator
+        run: |
+          git clone https://github.com/yoshi389111/github-profile-pacman.git
+          cd github-profile-pacman
+          npm install
+
+      - name: Generate Pacman SVG
+        run: |
+          cd github-profile-pacman
+          npm start ${{ github.repository_owner }}
+
+      - name: Copy output to your repo
+        run: |
+          mkdir -p output
+          cp github-profile-pacman/output/* ./output/
+
+      - name: Commit and push generated files
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add output/
+          git commit -m "Update Pacman contribution graph" || echo "No changes"
+          git push
 
